--- a/index.html
+++ b/index.html
@@ -82,6 +82,54 @@
         </div>
       </div>
     </section>
+    <section class="resume">
+      <h2 class="section-title">A summary of My Resume</h2>
+      <div class="resume-container">
+        <div class="resume-content">
+            <h3 class="resume-content-title">My Education</h3>
+            <div class="resume-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <h5 class="item-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="resume-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <h5 class="item-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+            <div class="resume-item">
+              <h4 class="item-title">Master in Computer Engineering</h4>
+              <h5 class="item-subtitle">Harvard University / 2015 - 2017</h5>
+              <p class="item-description">List skill/technologies here. You can change the icon above 
+                to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+            </div>
+        </div>
+        <div class="resume-content">
+          <h3 class="resume-content-title">My Experience</h3>
+          <div class="resume-item">
+            <h4 class="item-title">Sr. Font End Developer</h4>
+            <h5 class="item-subtitle">Apple Inc / 2020 - Current</h5>
+            <p class="item-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="resume-item">
+            <h4 class="item-title">Jr. Font End Developer</h4>
+            <h5 class="item-subtitle">Dribbble Inc / 2018 - 2022</h5>
+            <p class="item-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+          <div class="resume-item">
+            <h4 class="item-title">HTML Developer</h4>
+            <h5 class="item-subtitle">Adobe Inc / 2017 - 2018</h5>
+            <p class="item-description">List skill/technologies here. You can change the icon above 
+              to any of the 1500+ FontAwesome 5 free icons available. Aenean commodo ligula eget dolor.</p>
+          </div>
+        </div>
+      </div>
+      <button class="btn-primary">Download CV</button>
+    </section>
   </main>
 </body>
 </html>
