--- a/index.html
+++ b/index.html
@@ -130,6 +130,26 @@
       </div>
       <button class="btn-primary">Download CV</button>
     </section>
+    <section class="footer">
+      <div>
+        <h3 class="section-title" >Let's Connect</h3>
+        <p class="section-descripttion">Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Monday through Friday.</p>
+        <div class="footer-icons">
+          <img src="/images/icons/facebook.png" alt="">
+          <img src="images/icons/twitter.png" alt="">
+          <img src="images/icons/insta.png" alt="">
+        </div>
+      </div>
+      <div class="form-div">
+        <h3 class="section-title">Let's Message Me</h3>
+        <form action="">
+          <input type="text" name="" id="" placeholder="Your Name">
+          <input type="email" name="" id="" placeholder="Your Email">
+          <textarea name="" id="" cols="30" rows="10">Message</textarea>
+          <input class="btn-primary" type="submit" value="submit">
+        </form>
+      </div>
+    </section>
   </main>
 </body>
 </html>
